Make clear `M/G/c` and resolve lit overlaps.

--- a/submissions/jors/bibliography.bib
+++ b/submissions/jors/bibliography.bib
@@ -280,18 +280,6 @@ values},
     year = {2015}
 }
 
-@article{Kingman2009,
-    author = {J. F. C. Kingman},
-    doi = {10.1007/s11134-009-9147-4},
-    journal = {Queueing Systems},
-    number = {1-4},
-    pages = {3--12},
-    publisher = {Springer Science and Business Media {LLC}},
-    title = {The first {Erlang} century{\textemdash}and the next},
-    volume = {63},
-    year = {2009}
-}
-
 @article{Komashie2015,
     author = {Alexander Komashie and Ali Mousavi and P John Clarkson and Terry
 Young},
@@ -322,7 +310,7 @@ Theory},
     journal = {IEEE Journal of Biomedical and Health Informatics},
     number = {2},
     pages = {848-856},
-    title = {A Two-Stage Model to Predict Surgical Patients’ Lengths of Stay From an Electronic Patient Database},
+    title = {A Two-Stage Model to Predict Surgical Patients' Lengths of Stay From an Electronic Patient Database},
     volume = {23},
     year = {2019}
 }
@@ -380,18 +368,6 @@ Sensitivity Analysis},
 Second Service},
     volume = {41},
     year = {2012}
-}
-
-@misc{NHS:episode,
-    author = {{NHS Data Model and Dictionary}},
-    title = {{NHS Business Definitions: Consultant Episode (Hospital Provider)}},
-    url = {https://www.datadictionary.nhs.uk/}
-}
-
-@misc{NHS:spell,
-    author = {{NHS Data Model and Dictionary}},
-    title = {{NHS Business Definitions: Hospital Provider Spell}},
-    url = {https://www.datadictionary.nhs.uk/}
 }
 
 @article{Ogbuabor2018,
