Make param result subfigs vertical.

--- a/submissions/jors/main.tex
+++ b/submissions/jors/main.tex
@@ -902,18 +902,19 @@ each, leaving two years of simulated data from each repetition.
 \begin{figure}
     \centering
     \subfloat[]{%
-        \resizebox*{0.49\linewidth}{!}{%
+        \resizebox*{!}{0.28\textheight}{%
             \includegraphics[width=\linewidth]{best_params}
         }\label{fig:best_params}
-    }\hfill%
+    }
+
     \subfloat[]{%
-        \resizebox*{0.49\linewidth}{!}{%
+        \resizebox*{!}{0.28\textheight}{%
             \includegraphics[width=\linewidth]{median_params}
         }\label{fig:median_params}
     }
 
     \subfloat[]{%
-        \resizebox*{0.49\linewidth}{!}{%
+        \resizebox*{!}{0.28\textheight}{%
             \includegraphics[width=\linewidth]{worst_params}
         }\label{fig:worst_params}
     }
