Add some references for RSD.

--- a/submissions/jors/bibliography.bib
+++ b/submissions/jors/bibliography.bib
@@ -29,6 +29,16 @@ Models: A Bibliography},
     year = {1987}
 }
 
+@article{Benureau2018,
+    author = {Fabien C. Y. Benureau and Nicolas P. Rougier},
+    doi = {10.3389/fninf.2017.00069},
+    journal = {Frontiers in Neuroinformatics},
+    publisher = {Frontiers Media {SA}},
+    title = {Re-run,  Repeat,  Reproduce,  Reuse,  Replicate: Transforming Code into Scientific Contributions},
+    volume = {11},
+    year = {2018}
+}
+
 @book{Bhat2015,
     author = {U. Narayan Bhat},
     doi = {10.1007/978-0-8176-8421-1},
@@ -280,6 +290,33 @@ values},
     year = {2015}
 }
 
+@article{Jimenez2017,
+    author = {Jim{\'e}nez, Rafael C and Kuzak, Mateusz and Alhamdoosh, Monther
+and Barker, Michelle and Batut, B{\'e}r{\'e}nice and Borg, Mikael
+and Capella-Gutierrez, Salvador and Chue Hong, Neil and Cook,
+Martin and Corpas, Manuel and Flannery, Madison and Garcia, Leyla
+and Gelp{\'\i}, Josep Ll and Gladman, Simon and Goble, Carole and
+Gonz{\'a}lez Ferreiro, Montserrat and Gonzalez-Beltran, Alejandra
+and Griffin, Philippa C and Gr{\"u}ning, Bj{\"o}rn and Hagberg,
+Jonas and Holub, Petr and Hooft, Rob and Ison, Jon and Katz,
+Daniel S and Lesko{\v s}ek, Brane and L{\'o}pez G{\'o}mez,
+Federico and Oliveira, Luis J and Mellor, David and Mosbergen,
+Rowland and Mulder, Nicola and Perez-Riverol, Yasset and Pergl,
+Robert and Pichler, Horst and Pope, Bernard and Sanz, Ferran and
+Schneider, Maria V and Stodden, Victoria and Suchecki, Rados{\l}aw
+and Svobodov{\'a}Va{\v r}ekov{\'a}, Radka and Talvik, Harry-Anton
+and Todorov, Ilian and Treloar, Andrew and Tyagi, Sonika and van
+Gompel, Maarten and Vaughan, Daniel and Via, Allegra and Wang,
+Xiaochuan and Watson-Haigh, Nathan S and Crouch, Steve},
+    doi = {10.12688/f1000research.11407.1},
+    journal = {F1000Research},
+    pages = {ELIXIR-876},
+    title = {Four simple recommendations to encourage best practices in research
+software},
+    volume = {6},
+    year = {2017}
+}
+
 @article{Komashie2015,
     author = {Alexander Komashie and Ali Mousavi and P John Clarkson and Terry
 Young},
@@ -463,7 +500,6 @@ Raghavan, Barath},
     booktitle = {Proceedings of the 2011 31st International Conference on
 Distributed Computing Systems Workshops},
     doi = {10.1109/ICDCSW.2011.20},
-    month = {07},
     pages = {166--171},
     title = {Finding a `Kneedle' in a Haystack: Detecting Knee Points in System
 Behavior},
