--- a/submissions/jors/main.tex
+++ b/submissions/jors/main.tex
@@ -351,9 +351,9 @@ software.
 The simulation framework of choice for this manuscript is the discrete event
 simulation library, Ciw~\citep{Palmer2019}. Ciw is written in Python, and is a
 well-developed piece of open-source software, adhering to best practices in
-research software development. In~\cite{Palmer2019}, the authors stress how
-% TODO: Add reference or two for RSD
-ensuring sustainable and reproducible simulation work are at the core of their
+research software development such as those set out in~\cite{Benureau2018}
+and~\cite{Jimenez2017}. In~\cite{Palmer2019}, the authors stress how ensuring
+sustainable and reproducible simulation work are at the core of their
 development process.
 
 \subsubsection{Handling incomplete queue data}
