--- a/submissions/jors/main.tex
+++ b/submissions/jors/main.tex
@@ -147,29 +147,27 @@
 \maketitle
 
 \begin{abstract}
-This work uses a data-driven approach to analyse how the resource requirements
-of patients with chronic obstructive pulmonary disease (COPD) may change,
-quantifying how those changes impact the hospital system with which the patients
-interact. This approach is composed of a novel combination of often distinct
-modes of analysis: segmentation, operational queuing theory, and the recovery of
-parameters from incomplete data. By combining these methods as presented here,
-this work demonstrates that potential limitations around the availability of
-fine-grained data can be overcome. Thus, finding useful operational results
-despite using only administrative data.
+    This work uses a data-driven approach to analyse how the requirements of
+    patients with chronic obstructive pulmonary disease (COPD) may change,
+    quantifying their impact on the hospital system with which they interact.
+    This approach is composed of a novel combination of often distinct modes of
+    analysis: segmentation, queuing theory, and parameter recovery. Through this
+    combination of methods, this work demonstrates how to overcome potential
+    limitations presented by a lack of fine-grained data.
 
-The paper begins by finding a useful clustering of the population from this
-granular data that feeds into a multi-class \(M/G/c\) model, whose parameters
-are recovered from the data via the Wasserstein distance. This model is then
-used to conduct an informative analysis of the underlying queuing system and the
-needs of the population under study through several what-if scenarios.
-
-The analyses used to form and study this model consider, in effect, all types of
-patient arrivals and how those types impact the system. With that, this study
-finds that there are no quick solutions to reduce the impact of COPD patients on
-the system, including adding capacity to the system. In this analysis, the only
-effective intervention to reduce the strain caused by those presenting with COPD
-is to enact external policies which directly improve the overall health of the
-COPD population before they arrive at the hospital.
+    The authors identify a clustering of the population from an administrative
+    data that feeds into a multi-class \(M/G/c\) model, whose parameters are
+    recovered from the data via the Wasserstein distance. This model then
+    informs an analysis of the underlying system and the needs of the population
+    under study.
+    
+    The analyses used herein consider, in effect, all types of patient arrivals
+    and how they impact the system. With that, this study finds that there are
+    no quick solutions to reduce the impact of COPD patients on the system,
+    including adding capacity to the system. In this analysis, the only
+    effective intervention to reduce the strain caused by those presenting with
+    COPD is to enact external policies which directly improve the overall health
+    of the COPD population before their arrival.
 \end{abstract}
 
 \begin{keywords}
